[metadata]
name = chessbot
version = 0.0.1
url = https://github.com/dovvakkin/chessbot
author = Dmirtiy K., Max K., Eugene K.
author_email = ibvfteh@gmail.com
description = Exam project for PythonDevelopment2022 course
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = chessbot
include_package_data = True
install_requires =
   numpy
   pillow
   stockfish
   requests
   tqdm
   pytelegrambotapi

[options.entry_points]
console_scripts =
    chessbot = chessbot:main

[options.package_data]
chessbot =
    */*/chessbot.mo
    chessbot/Board_images/*
    chessbot/Current_game/*
